--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "type": "project",
     "require": {
         "php": "^8.1",
+        "illuminate/mail": "^10.48",
         "illuminate/view": "*",
-        "laravel/lumen-framework": "^10.0"
+        "laravel/lumen-framework": "^10.0",
+        "laravel/tinker": "^2.10",
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
