--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^8.1",
+        "darkaonline/l5-swagger": "^8.6",
         "illuminate/mail": "^10.48",
         "illuminate/view": "*",
         "laravel/lumen-framework": "^10.0",
@@ -30,6 +31,7 @@
         }
     },
     "scripts": {
+        "start": "php -S localhost:8000 -t public",
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ]
