--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,10 @@ APP_NAME=controle-estoque-webservice
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/Inventory-Control-System-v1-API/
 APP_TIMEZONE=UTC
+LOG_CHANNEL=stack
+LOG_LEVEL=debug
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
@@ -19,10 +21,10 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=vitorgabrieldeoliveira.desktop@gmail.com
-MAIL_PASSWORD=qzsm gfmr fhzc okhi
+MAIL_PASSWORD=qzsmgfmrfhzcokhi
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=vitorgabrieldeoliveira.desktop@gmail.com
-MAIL_FROM_NAME="Trabalho Amigo"
+MAIL_FROM_NAME="Gerenciamento de estoque"
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
