--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.6",
+        "firebase/php-jwt": "^6.11",
         "illuminate/mail": "^10.48",
         "illuminate/view": "*",
         "laravel/lumen-framework": "^10.0",
