--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "start": "php -S localhost:8000 -t public",
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+        ],
+        "docs": "php artisan l5-swagger:generate"
     },
     "config": {
         "optimize-autoloader": true,
